# vcpkg-cmake-presets

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.macos.template  CMakeUserPresets.json.template  CMakeUserPresets.json.ubuntu.template  CMakeUserPresets.json.windows.template  README.md  Ubuntu下使用clang构建.md  clangd 插件的使用.md  main.cpp  vcpkg.json  对 CMake Tools 插件的一些配置.md
Algorithms/: CMakeLists.txt  binary_search.cpp
FFmpegLib/: .gitignore  CMakeLists.txt  README.md  main.cpp  win-ffmpeg-static-download.ps1
FFmpegLib/include/: alpha-av-core.h  alpha-av-decode.h  alpha-av-demux.h  macros.h
FFmpegLib/src/: alpha-av-core.cpp  alpha-av-decode.cpp  alpha-av-demux.cpp
SingleFilePrograms/: CMakeLists.txt  singleton.cpp  unique-ptr.cpp  utf8-parse.cpp
VulkanWrapper/: .gitignore  CMakeLists.txt  README.md  alpha-ffmpeg-demo.cpp  demo-shaders-generate.ps1  demo-shaders-generate.sh  demo.cpp  main.cpp  shaders-generate.ps1  shaders-generate.sh  vulkan-tutorial-demo.cpp  vulkan-tutorial-texture-imgui-demo.cpp  vulkan-tutorial-triangle-imgui-demo.cpp  win-ffmpeg-static-download.ps1
VulkanWrapper/demo-shaders/: shader.frag  shader.vert
VulkanWrapper/include/: buffer.h  context.h  demux-util.h  render-process.h  render.h  shader.h  structs.h  swapchain-context.h  swapchain.h  ui-components.h
VulkanWrapper/shaders/: shader.frag  shader.vert  yuv2rgb.frag  yuv2rgb.vert
VulkanWrapper/src/: buffer.cpp  context.cpp  demux-util.cpp  render-process.cpp  render.cpp  shader.cpp  swapchain-context.cpp  swapchain.cpp  ui-components.cpp
WebUI/: .gitignore  CMakeLists.txt  README.md  main.cpp  webui-windows-msvc-download.ps1
WrapperLib2C/: CMakeLists.txt
WrapperLib2C/include/: lib-demo-wrapper.h  lib-demo.h
WrapperLib2C/src/: lib-c-main.c  lib-cpp-main.cpp  lib-demo-wrapper.cpp  lib-demo.cpp
cmake/: CMakePresets.json  CMakeUserPresets.json.macos.template  CMakeUserPresets.json.ubuntu.template  CMakeUserPresets.json.windows.template
doc/: Ubuntu 使用 clang.md  Ubuntu下使用从源码构建的LLVM.md  Windows FFmpeg6 构建.md  Windows 下 Debug 链接 FFmpeg PDB 文件.md  Windows下使用从源码构建的LLVM.md  clangd 插件的使用.md  macOS FFmpeg6 构建.md  macOS ffmpeg6构建.md
